@@ -5,6 +5,7 @@ o Fixes #394 - Identifiers inside of FOREACH get the wrong type
 o Fixes #390 - IN/ANY/NONE/ANY/SINGLE causes RuntimeException for some patterns
 o Fixes #387 - Some patterns produced "Unexpected traversal state" in Cypher
 o Upgraded the Scala version to 2.10
+o Fixes #355 - Collections in collections are still Scala collections instead of Java collections
 
 1.9.M03
 -------
